gen/lpcParser.cpp

// Generated from D:/src/lpcfmt\lpc.g4 by ANTLR 4.9.1


#include "lpcListener.h"
#include "lpcVisitor.h"

#include "lpcParser.h"


using namespace antlrcpp;
using namespace antlr4;

lpcParser::lpcParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

lpcParser::~lpcParser() {
  delete _interpreter;
}

std::string lpcParser::getGrammarFileName() const {
  return "lpc.g4";
}

const std::vector<std::string>& lpcParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& lpcParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

lpcParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* lpcParser::ProgramContext::EOF() {
  return getToken(lpcParser::EOF, 0);
}

std::vector<lpcParser::Preprocessor_invokeContext *> lpcParser::ProgramContext::preprocessor_invoke() {
  return getRuleContexts<lpcParser::Preprocessor_invokeContext>();
}

lpcParser::Preprocessor_invokeContext* lpcParser::ProgramContext::preprocessor_invoke(size_t i) {
  return getRuleContext<lpcParser::Preprocessor_invokeContext>(i);
}

std::vector<lpcParser::DefContext *> lpcParser::ProgramContext::def() {
  return getRuleContexts<lpcParser::DefContext>();
}

lpcParser::DefContext* lpcParser::ProgramContext::def(size_t i) {
  return getRuleContext<lpcParser::DefContext>(i);
}


size_t lpcParser::ProgramContext::getRuleIndex() const {
  return lpcParser::RuleProgram;
}

void lpcParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<lpcListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void lpcParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<lpcListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


antlrcpp::Any lpcParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<lpcVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

lpcParser::ProgramContext* lpcParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, lpcParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(161);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (((((_la - 1) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 1)) & ((1ULL << (lpcParser::T__0 - 1))
      | (1ULL << (lpcParser::T__4 - 1))
      | (1ULL << (lpcParser::T__5 - 1))
      | (1ULL << (lpcParser::L_CLASS - 1))
      | (1ULL << (lpcParser::L_BASIC_TYPE - 1))
      | (1ULL << (lpcParser::L_INHERIT - 1))
      | (1ULL << (lpcParser::L_TYPE_MODIFIER - 1))
      | (1ULL << (lpcParser::L_IDENTIFIER - 1))
      | (1ULL << (lpcParser::L_ARRAY - 1)))) != 0)) {
      setState(159);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
      case 1: {
        setState(156);
        preprocessor_invoke();
        break;
      }

      case 2: {
        setState(157);
        def();
        break;
      }

      case 3: {
        setState(158);
        match(lpcParser::T__0);
        break;
      }

      default:
        break;
      }
      setState(163);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(164);
    match(lpcParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Preprocessor_invoke_arglistContext ------------------------------------------------------------------

lpcParser::Preprocessor_invoke_arglistContext::Preprocessor_invoke_arglistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

lpcParser::Preprocessor_invokeContext* lpcParser::Preprocessor_invoke_arglistContext::preprocessor_invoke() {
  return getRuleContext<lpcParser::Preprocessor_invokeContext>(0);
}

tree::TerminalNode* lpcParser::Preprocessor_invoke_arglistContext::L_STRING() {
  return getToken(lpcParser::L_STRING, 0);
}

std::vector<lpcParser::Preprocessor_invoke_arglistContext *> lpcParser::Preprocessor_invoke_arglistContext::preprocessor_invoke_arglist() {
  return getRuleContexts<lpcParser::Preprocessor_invoke_arglistContext>();
}

lpcParser::Preprocessor_invoke_arglistContext* lpcParser::Preprocessor_invoke_arglistContext::preprocessor_invoke_arglist(size_t i) {
  return getRuleContext<lpcParser::Preprocessor_invoke_arglistContext>(i);
}


size_t lpcParser::Preprocessor_invoke_arglistContext::getRuleIndex() const {
  return lpcParser::RulePreprocessor_invoke_arglist;
}

void lpcParser::Preprocessor_invoke_arglistContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<lpcListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPreprocessor_invoke_arglist(this);
}

void lpcParser::Preprocessor_invoke_arglistContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<lpcListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPreprocessor_invoke_arglist(this);
}


antlrcpp::Any lpcParser::Preprocessor_invoke_arglistContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<lpcVisitor*>(visitor))
    return parserVisitor->visitPreprocessor_invoke_arglist(this);
  else
    return visitor->visitChildren(this);
}


lpcParser::Preprocessor_invoke_arglistContext* lpcParser::preprocessor_invoke_arglist() {
   return preprocessor_invoke_arglist(0);
}

lpcParser::Preprocessor_invoke_arglistContext* lpcParser::preprocessor_invoke_arglist(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  lpcParser::Preprocessor_invoke_arglistContext *_localctx = _tracker.createInstance<Preprocessor_invoke_arglistContext>(_ctx, parentState);
  lpcParser::Preprocessor_invoke_arglistContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 2;
  enterRecursionRule(_localctx, 2, lpcParser::RulePreprocessor_invoke_arglist, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(169);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case lpcParser::L_IDENTIFIER: {
        setState(167);
        preprocessor_invoke();
        break;
      }

      case lpcParser::L_STRING: {
        setState(168);
        match(lpcParser::L_STRING);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    _ctx->stop = _input->LT(-1);
    setState(176);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        _localctx = _tracker.createInstance<Preprocessor_invoke_arglistContext>(parentContext, parentState);
        pushNewRecursionContext(_localctx, startState, RulePreprocessor_invoke_arglist);
        setState(171);

        if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
        setState(172);
        match(lpcParser::T__1);
        setState(173);
        preprocessor_invoke_arglist(3); 
      }
      setState(178);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- Preprocessor_invokeContext ------------------------------------------------------------------

lpcParser::Preprocessor_invokeContext::Preprocessor_invokeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* lpcParser::Preprocessor_invokeContext::L_IDENTIFIER() {
  return getToken(lpcParser::L_IDENTIFIER, 0);
}

lpcParser::Preprocessor_invoke_arglistContext* lpcParser::Preprocessor_invokeContext::preprocessor_invoke_arglist() {
  return getRuleContext<lpcParser::Preprocessor_invoke_arglistContext>(0);
}


size_t lpcParser::Preprocessor_invokeContext::getRuleIndex() const {
  return lpcParser::RulePreprocessor_invoke;
}

void lpcParser::Preprocessor_invokeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<lpcListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPreprocessor_invoke(this);
}

void lpcParser::Preprocessor_invokeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<lpcListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPreprocessor_invoke(this);
}


antlrcpp::Any lpcParser::Preprocessor_invokeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<lpcVisitor*>(visitor))
    return parserVisitor->visitPreprocessor_invoke(this);
  else
    return visitor->visitChildren(this);
}

lpcParser::Preprocessor_invokeContext* lpcParser::preprocessor_invoke() {
  Preprocessor_invokeContext *_localctx = _tracker.createInstance<Preprocessor_invokeContext>(_ctx, getState());
  enterRule(_localctx, 4, lpcParser::RulePreprocessor_invoke);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(185);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(179);
      match(lpcParser::L_IDENTIFIER);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(180);
      match(lpcParser::L_IDENTIFIER);
      setState(181);
      match(lpcParser::T__2);

      setState(182);
      preprocessor_invoke_arglist(0);
      setState(183);
      match(lpcParser::T__3);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InheritanceContext ------------------------------------------------------------------

lpcParser::InheritanceContext::InheritanceContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

lpcParser::Type_modifier_listContext* lpcParser::InheritanceContext::type_modifier_list() {
  return getRuleContext<lpcParser::Type_modifier_listContext>(0);
}

tree::TerminalNode* lpcParser::InheritanceContext::L_INHERIT() {
  return getToken(lpcParser::L_INHERIT, 0);
}

lpcParser::String_con1Context* lpcParser::InheritanceContext::string_con1() {
  return getRuleContext<lpcParser::String_con1Context>(0);
}


size_t lpcParser::InheritanceContext::getRuleIndex() const {
  return lpcParser::RuleInheritance;
}

void lpcParser::InheritanceContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<lpcListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInheritance(this);
}

void lpcParser::InheritanceContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<lpcListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInheritance(this);
}


antlrcpp::Any lpcParser::InheritanceContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<lpcVisitor*>(visitor))
    return parserVisitor->visitInheritance(this);
  else
    return visitor->visitChildren(this);
}

lpcParser::InheritanceContext* lpcParser::inheritance() {
  InheritanceContext *_localctx = _tracker.createInstance<InheritanceContext>(_ctx, getState());
  enterRule(_localctx, 6, lpcParser::RuleInheritance);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(187);
    type_modifier_list();
    setState(188);
    match(lpcParser::L_INHERIT);
    setState(189);
    string_con1(0);
    setState(190);
    match(lpcParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RealContext ------------------------------------------------------------------

lpcParser::RealContext::RealContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* lpcParser::RealContext::L_REAL() {
  return getToken(lpcParser::L_REAL, 0);
}


size_t lpcParser::RealContext::getRuleIndex() const {
  return lpcParser::RuleReal;
}

void lpcParser::RealContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<lpcListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterReal(this);
}

void lpcParser::RealContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<lpcListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitReal(this);
}


antlrcpp::Any lpcParser::RealContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<lpcVisitor*>(visitor))
    return parserVisitor->visitReal(this);
  else
    return visitor->visitChildren(this);
}

lpcParser::RealContext* lpcParser::real() {
  RealContext *_localctx = _tracker.createInstance<RealContext>(_ctx, getState());
  enterRule(_localctx, 8, lpcParser::RuleReal);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(192);
    match(lpcParser::L_REAL);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NumberContext ------------------------------------------------------------------

lpcParser::NumberContext::NumberContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* lpcParser::NumberContext::L_NUMBER() {
  return getToken(lpcParser::L_NUMBER, 0);
}


size_t lpcParser::NumberContext::getRuleIndex() const {
  return lpcParser::RuleNumber;
}

void lpcParser::NumberContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<lpcListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNumber(this);
}

void lpcParser::NumberContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<lpcListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNumber(this);
}


antlrcpp::Any lpcParser::NumberContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<lpcVisitor*>(visitor))
    return parserVisitor->visitNumber(this);
  else
    return visitor->visitChildren(this);
}

lpcParser::NumberContext* lpcParser::number() {
  NumberContext *_localctx = _tracker.createInstance<NumberContext>(_ctx, getState());
  enterRule(_localctx, 10, lpcParser::RuleNumber);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(194);
    match(lpcParser::L_NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Optional_starContext ------------------------------------------------------------------

lpcParser::Optional_starContext::Optional_starContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t lpcParser::Optional_starContext::getRuleIndex() const {
  return lpcParser::RuleOptional_star;
}

void lpcParser::Optional_starContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<lpcListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOptional_star(this);
}

void lpcParser::Optional_starContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<lpcListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOptional_star(this);
}


antlrcpp::Any lpcParser::Optional_starContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<lpcVisitor*>(visitor))
    return parserVisitor->visitOptional_star(this);
  else
    return visitor->visitChildren(this);
}

lpcParser::Optional_starContext* lpcParser::optional_star() {
  Optional_starContext *_localctx = _tracker.createInstance<Optional_starContext>(_ctx, getState());
  enterRule(_localctx, 12, lpcParser::RuleOptional_star);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(197);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == lpcParser::T__4) {
      setState(196);
      match(lpcParser::T__4);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Block_or_semiContext ------------------------------------------------------------------

lpcParser::Block_or_semiContext::Block_or_semiContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

lpcParser::BlockContext* lpcParser::Block_or_semiContext::block() {
  return getRuleContext<lpcParser::BlockContext>(0);
}

lpcParser::ErrorContext* lpcParser::Block_or_semiContext::error() {
  return getRuleContext<lpcParser::ErrorContext>(0);
}


size_t lpcParser::Block_or_semiContext::getRuleIndex() const {
  return lpcParser::RuleBlock_or_semi;
}

void lpcParser::Block_or_semiContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<lpcListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock_or_semi(this);
}

void lpcParser::Block_or_semiContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<lpcListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock_or_semi(this);
}


antlrcpp::Any lpcParser::Block_or_semiContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<lpcVisitor*>(visitor))
    return parserVisitor->visitBlock_or_semi(this);
  else
    return visitor->visitChildren(this);
}

lpcParser::Block_or_semiContext* lpcParser::block_or_semi() {
  Block_or_semiContext *_localctx = _tracker.createInstance<Block_or_semiContext>(_ctx, getState());
  enterRule(_localctx, 14, lpcParser::RuleBlock_or_semi);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(202);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case lpcParser::T__6: {
        enterOuterAlt(_localctx, 1);
        setState(199);
        block();
        break;
      }

      case lpcParser::T__0: {
        enterOuterAlt(_localctx, 2);
        setState(200);
        match(lpcParser::T__0);
        break;
      }

      case lpcParser::L_ERROR: {
        enterOuterAlt(_localctx, 3);
        setState(201);
        error();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdentifierContext ------------------------------------------------------------------

lpcParser::IdentifierContext::IdentifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* lpcParser::IdentifierContext::L_IDENTIFIER() {
  return getToken(lpcParser::L_IDENTIFIER, 0);
}


size_t lpcParser::IdentifierContext::getRuleIndex() const {
  return lpcParser::RuleIdentifier;
}

void lpcParser::IdentifierContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<lpcListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIdentifier(this);
}

void lpcParser::IdentifierContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<lpcListener *>(listener);
  if (parserListener != nullptr)
